refacotor(LottoTickets) : 스트림 코드 개선